add dynamic navigation

--- a/UmbracoCertification/App_Data/umbraco.config
+++ b/UmbracoCertification/App_Data/umbraco.config
@@ -12,6 +12,7 @@
     <textPage id="1068" key="56c8bed1-1b30-4b65-b662-80af3e7a29e9" parentID="1064" level="2" creatorID="0" sortOrder="0" createDate="2017-04-10T11:45:50" updateDate="2017-04-10T12:41:28" nodeName="Documentation" urlName="documentation" path="-1,1064,1068" isDoc="" nodeType="1067" creatorName="DrewMac" writerName="DrewMac" writerID="0" template="1066" nodeTypeAlias="textPage">
       <bodyText><![CDATA[<p>Here is my documentaion... yada yada yada</p>]]></bodyText>
     </textPage>
-    <textPage id="1069" key="7d77a8c2-2a1e-48b4-aaba-73566c59d52a" parentID="1064" level="2" creatorID="0" sortOrder="1" createDate="2017-04-10T11:46:00" updateDate="2017-04-10T11:46:00" nodeName="About Us" urlName="about-us" path="-1,1064,1069" isDoc="" nodeType="1067" creatorName="DrewMac" writerName="DrewMac" writerID="0" template="1066" nodeTypeAlias="textPage" />
+    <textPage id="1071" key="9733b20f-ff55-4292-86ea-d76915d5ca59" parentID="1064" level="2" creatorID="0" sortOrder="1" createDate="2017-04-10T13:42:12" updateDate="2017-04-10T13:44:52" nodeName="My New Page" urlName="my-new-page" path="-1,1064,1071" isDoc="" nodeType="1067" creatorName="DrewMac" writerName="DrewMac" writerID="0" template="1066" nodeTypeAlias="textPage" />
+    <textPage id="1069" key="7d77a8c2-2a1e-48b4-aaba-73566c59d52a" parentID="1064" level="2" creatorID="0" sortOrder="2" createDate="2017-04-10T11:46:00" updateDate="2017-04-10T13:44:53" nodeName="About Us" urlName="about-us" path="-1,1064,1069" isDoc="" nodeType="1067" creatorName="DrewMac" writerName="DrewMac" writerID="0" template="1066" nodeTypeAlias="textPage" />
   </homepage>
 </root>
