--- a/UmbracoCertification/App_Data/umbraco.config
+++ b/UmbracoCertification/App_Data/umbraco.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE root [<!ELEMENT newsItem ANY>
-<!ATTLIST newsItem id ID #REQUIRED>
-<!ELEMENT newsArea ANY>
-<!ATTLIST newsArea id ID #REQUIRED>
+<!DOCTYPE root [<!ELEMENT homepage ANY>
+<!ATTLIST homepage id ID #REQUIRED>
 <!ELEMENT textPage ANY>
 <!ATTLIST textPage id ID #REQUIRED>
-<!ELEMENT homepage ANY>
-<!ATTLIST homepage id ID #REQUIRED>
+<!ELEMENT newsArea ANY>
+<!ATTLIST newsArea id ID #REQUIRED>
+<!ELEMENT newsItem ANY>
+<!ATTLIST newsItem id ID #REQUIRED>
 ]>
 <root id="-1">
   <homepage id="1064" key="4c9ed87f-74b2-4178-a3a6-446fefb7b804" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2017-04-10T11:25:47" updateDate="2017-04-10T13:16:49" nodeName="Home" urlName="home" path="-1,1064" isDoc="" nodeType="1062" creatorName="DrewMac" writerName="DrewMac" writerID="0" template="1061" nodeTypeAlias="homepage">
@@ -20,9 +20,10 @@
     <textPage id="1069" key="7d77a8c2-2a1e-48b4-aaba-73566c59d52a" parentID="1064" level="2" creatorID="0" sortOrder="2" createDate="2017-04-10T11:46:00" updateDate="2017-04-10T13:44:53" nodeName="About Us" urlName="about-us" path="-1,1064,1069" isDoc="" nodeType="1067" creatorName="DrewMac" writerName="DrewMac" writerID="0" template="1066" nodeTypeAlias="textPage" />
     <newsArea id="1079" key="85d5e09e-ccee-4fdb-9af2-2d706a9d28f3" parentID="1064" level="2" creatorID="0" sortOrder="3" createDate="2017-04-10T14:17:54" updateDate="2017-04-10T14:57:52" nodeName="News" urlName="news" path="-1,1064,1079" isDoc="" nodeType="1074" creatorName="DrewMac" writerName="DrewMac" writerID="0" template="1082" nodeTypeAlias="newsArea">
       <bodyText><![CDATA[<p>This is the welcome view for the news area. Look at all of our news below.</p>]]></bodyText>
-      <newsItem id="1080" key="0cdb150e-43fa-4ac0-b950-9173eaa70284" parentID="1079" level="3" creatorID="0" sortOrder="0" createDate="2017-04-10T14:19:12" updateDate="2017-04-10T14:57:59" nodeName="Area Raccoon Thinks Your Garbage Stinks" urlName="area-raccoon-thinks-your-garbage-stinks" path="-1,1064,1079,1080" isDoc="" nodeType="1077" creatorName="DrewMac" writerName="DrewMac" writerID="0" template="1083" nodeTypeAlias="newsItem">
+      <newsItem id="1080" key="0cdb150e-43fa-4ac0-b950-9173eaa70284" parentID="1079" level="3" creatorID="0" sortOrder="0" createDate="2017-04-10T14:19:12" updateDate="2017-04-11T07:40:29" nodeName="Area Raccoon Thinks Your Garbage Stinks" urlName="area-raccoon-thinks-your-garbage-stinks" path="-1,1064,1079,1080" isDoc="" nodeType="1077" creatorName="DrewMac" writerName="DrewMac" writerID="0" template="1083" nodeTypeAlias="newsItem">
         <summary><![CDATA[It's the short view of this raccoon story.]]></summary>
-        <bodyText><![CDATA[<p>And this is the whole raccoon story. </p>]]></bodyText>
+        <bodyText><![CDATA[<p>And this is the whole raccoon story. </p>
+<?UMBRACO_MACRO macroAlias="Gallery" mediaIds="1085,1086,1090,1089,1088" />]]></bodyText>
       </newsItem>
       <newsItem id="1081" key="3b0b4dbe-0695-4908-aa35-22ca40eee9e1" parentID="1079" level="3" creatorID="0" sortOrder="1" createDate="2017-04-10T14:26:57" updateDate="2017-04-10T14:58:05" nodeName="This Should Be First" urlName="this-should-be-first" path="-1,1064,1079,1081" isDoc="" nodeType="1077" creatorName="DrewMac" writerName="DrewMac" writerID="0" template="1083" nodeTypeAlias="newsItem">
         <summary><![CDATA[Just moving some stuff around]]></summary>
